<resources>
    <string name="app_name">tnma</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version">Version 1.0 ©TNMA 2020</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email_address">E-mail Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Create Account</string>
    <string name="verify">Verify</string>
    <string name="confirm">Confirm</string>
    <string name="verification_code">Verification Code</string>
    <string name="title_activity_dashboard">TNMA Connect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="proSponsor"><a href="https://tnmaonline.org/sponsor-tiers/">See Page</a></string>

    <string name="proInformation">View additional profile information here, along with your private messages.</string>
    <string name="proRegisteredEvents">View events you have registered for.</string>
    <string name="proRecentQuestions">Students: view questions you have recently asked. Mentors: view all questions.</string>

    <string name="proDonations">If you are interested, you can also find out more about our sponsor tiers at www.tnmaonline.org!</string>

    <string name="dummy_text">Helping members to effectively communicate with medical professionals within TNMA network</string>


    <string name="drawerOpen">Dashboard</string>
    <string name="drawerClose">Dashboard</string>


    <string name="donate">Donate</string>

    <string name="role_prompt">Choose your role</string>

    <string-array name="role_arrays">
        <item>Mentor</item>
        <item>Student</item>
    </string-array>

    <string-array name="event_title">
        <item>Eating Contest</item>
        <item>Coding Contest</item>
        <item>Sleeping Event</item>
        <item>Health Campaign</item>
    </string-array>

    <string-array name="event_description">
        <item>This is a random eating event</item>
        <item>This is a random coding event</item>
        <item>This is a random Sleeping event</item>
        <item>This is a random Health event</item>

    </string-array>
    <string-array name="event_address">
        <item>Denton</item>
        <item>Frisco</item>
        <item>Mckenny</item>
        <item>Dallas</item>

    </string-array>
    <string-array name="event_time">
        <item>10:00 pm</item>
        <item>12:00 pm</item>
        <item>11:00 pm</item>
        <item>5:00 pm</item>

    </string-array>

    <string-array name="event_date">
        <item>12/03/2020</item>
        <item>23/04/2020</item>
        <item>17/05/2020</item>
        <item>07/08/2020</item>

    </string-array>
    <string-array name="name_user">
        <item>rabi</item>
        <item>anil</item>
        <item>abiral</item>
        <item>sid</item>

    </string-array>


</resources>
